=== 2.0.3 (TBD)
* Expand rake dependency to [>= 0.9.2.2, < 11] (works with Rake 10.1)
* Expand rdoc dependency to [>= 3.12, < 5] (works with rdoc 4.0.1)
* Augment Gem::Specification instance via extend
* Fix Hoe vestige in install_deps task; use real Gem::Dependency

=== 2.0.2 (2012-12-6)
* Expand rake dependency to [>= 0.9.2.2, < 10.1] allowing new Rake
  FunkyVersion(TM) 10.
* Upgrade to jruby-openssl ~> 0.8.1 (java platform only). JRuby 1.6
  still requires this for things like "jrake push" to work. The 0.8
  series is also safe with JRuby 1.7.
* Fix botched local init_files ref in LineMatch. This had made it
  impossible to modify from the :default init_files, for example to
  add multiple files.

=== 2.0.1 (2012-1-29)
* Avoid initialization warnings and remaining case of double manifest
  generation (via new ManifestTracker)
* Use expand_path for temporary LOAD_PATH addition of lib dir
* Fix a &block call warning

=== 2.0.0 (2012-1-12)
* Major rewrite. Consumer project changes are required on upgrade!
  See also updated README.
* Gem specification details are now in a separate, but highly
  automated and generally improved gemspec file. This allows full
  interoperability with Bundler.
* Improved ReadmeParser for spec automation.
* For Java projects, Maven is now executed in process via the
  rjack-maven gem (speed improvement)
* Hoe is no longer a dependency, however many Hoe compatible tasks are
  still supported.
* New default, in process Minitest launcher (speed improvement,
  particularly on JRuby)

=== 1.4.1 (2012-1-26)
This is likely the last maintenance release of the TarPit 1.4.x
series. Please take the time to review and upgrade to TarPit 2.x.

* Narrow and fix Hoe release to version = 2.12.3. An incompatibly was
  introduced in Hoe 2.12.5, causing loss of gem specification
  dependencies.
* Upgrade/narrow and fix RDoc to version 3.12 for long term
  compatibility.

=== 1.4.0 (2011-9-21)
* Update/broaden to rdoc ~> 3.6
* Update to hoe ~> 2.12.3
