@@ -3,6 +3,9 @@
 * Expand rdoc dependency to [>= 3.12, < 5] (works with rdoc 4.0.1)
 * Augment Gem::Specification instance via extend
 * Fix Hoe vestige in install_deps task; use real Gem::Dependency
+* Avoid "WARN: Unresolved specs during Gem::Specification.reset" with
+  tarpit dependencies on RubyGems 2.x when bundler calls
+  Gem::Specification.reset via clear_paths.
 
 === 2.0.2 (2012-12-6)
 * Expand rake dependency to [>= 0.9.2.2, < 10.1] allowing new Rake
